[gd_scene load_steps=10 format=3 uid="uid://dg4bdh0k58ng4"]

[ext_resource type="Theme" uid="uid://ccq60t47rgtuy" path="res://Themes/start_menu_theme.tres" id="1_4yl0d"]
[ext_resource type="Script" uid="uid://p0p6dqdpbp6r" path="res://Scripts/account.gd" id="1_k67bu"]
[ext_resource type="Texture2D" uid="uid://duhcgicm0tyyh" path="res://GUI/gui icons/close_56dp_FFFFFF_FILL0_wght400_GRAD0_opsz48.svg" id="2_jaths"]
[ext_resource type="Texture2D" uid="uid://pp7bif2nvuma" path="res://GUI/gui icons/visibility_56dp_FFFFFF_FILL0_wght400_GRAD0_opsz48.svg" id="3_7j1gc"]
[ext_resource type="PackedScene" uid="uid://hnumxyq8v0gm" path="res://GUI/c_password.tscn" id="4_8b1no"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8b1no"]
bg_color = Color(0, 0, 0, 0.454902)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k67bu"]
bg_color = Color(0.842635, 3.56168e-06, 4.81307e-07, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 15
shadow_color = Color(0, 0, 0, 0)
shadow_size = 10
shadow_offset = Vector2(5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jaths"]
bg_color = Color(0.222256, 5.6704e-07, 6.01634e-09, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 15
shadow_color = Color(0, 0, 0, 0)
shadow_size = 10
shadow_offset = Vector2(5, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7j1gc"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 15
shadow_color = Color(0, 0, 0, 0)
shadow_size = 10
shadow_offset = Vector2(5, 0)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k67bu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4yl0d")
theme_override_styles/panel = SubResource("StyleBoxFlat_8b1no")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_4yl0d")

[node name="Spacer" type="Control" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Username" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_4yl0d")
theme_override_font_sizes/font_size = 60
text = "Username: "

[node name="Email" type="Label" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme = ExtResource("1_4yl0d")
theme_override_font_sizes/font_size = 60
text = "Email Address: "

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Password" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_4yl0d")
theme_override_font_sizes/font_size = 60
text = "Password: "

[node name="show" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
icon = ExtResource("3_7j1gc")
icon_alignment = 1
expand_icon = true

[node name="CPassword" type="Button" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_4yl0d")
text = "Change password"

[node name="CPasswordMenu" parent="ScrollContainer/VBoxContainer" instance=ExtResource("4_8b1no")]
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(80, 80)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
theme = ExtResource("1_4yl0d")
theme_override_colors/icon_hover_color = Color(0.556953, 0.556953, 0.556953, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_k67bu")
theme_override_styles/hover = SubResource("StyleBoxFlat_jaths")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_7j1gc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7j1gc")
theme_override_styles/normal = SubResource("StyleBoxFlat_k67bu")
icon = ExtResource("2_jaths")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -624.0
offset_top = -68.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_4yl0d")
theme_override_font_sizes/font_size = 50

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer/show" to="." method="_on_show_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/CPassword" to="." method="_on_c_password_pressed"]
[connection signal="visibility_changed" from="ScrollContainer/VBoxContainer/CPasswordMenu" to="." method="_on_c_password_menu_visibility_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
